apps/kthulu/donetick/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donetick
  namespace: donetick
spec:
  ingressClassName: traefik
  rules:
    - host: donetick.barlabs.tech
      http:
        paths:
          - backend:
              service:
                name: donetick
                port:
                  number: 80
            path: /
            pathType: Prefix
